# MatPilot

./: .env.example  .gitignore  .python-version  DEPLOYMENT.md  README.md  _test_rietveld_api.py  alembic.ini  matpilot_homepage (3).html  matpilot_homepage_v2.html  pyproject.toml  render.yaml  requirements.txt  tmp_body.json
backend/: main.py
backend/alembic/: env.py
backend/api/: dependencies.py
backend/parsers/: cif_parser.py  parser_factory.py  parser_interface.py  raw_parser.py  xrdml_parser.py  xy_parser.py
backend/reference/: cif_cache.py  cif_parser.py  pymatgen_pattern_generator.py  similarity_engine.py  theoretical_pattern.py
backend/services/: analysis_orchestrator.py  auth_service.py  background_correction.py  intensity_normalization.py  job_manager.py  ka2_stripping.py  manual_refinement_service.py  noise_reduction.py  peak_detection.py  peak_fitting.py  phase_identification_service.py  phase_identifier.py  pipeline.py  report_generator.py  rietveld_service.py  scientific_pipeline.py  storage_service.py  upload_service.py
frontend/: .env.example  README.md  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/api/: index.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  home-client.tsx  layout.tsx  loading.tsx  matpilot_v2.css  matpilot_v3.css  not-found.tsx  page.tsx
frontend/components/: ai-assistant.tsx  command-palette.tsx  crystal-viewer.tsx  data-table.tsx  keyboard-shortcuts.tsx  language-provider.tsx  notification-bell.tsx  providers.tsx  theme-provider.tsx  upload-progress.tsx  upload-zone.tsx
frontend/hooks/: use-api.ts  (+1 more)
pics/: generate_logo.py
samples/: LaB6_041008.xrdml
tests/: _check_local_db.py  conftest.py  generate_test_raw.py  test_api_flow.py  test_pipeline_e2e.py
(+188 files in other folders)
